@@ -1,4 +1,5 @@
 2006-04-21  Don Allingham  <don@gramps-project.org>
+	* src/plugins/Desbrowser.py: check for active person
 	* src/GrampsDb/_ReadXML.py: fix typos
 	* src/PluginUtils/_PluginMgr.py: handle module to description mapping
 	* src/Editors/_EditRepoRef.py: fix typos
